--- a/app/src/main/res/layout/new_main_layout.xml
+++ b/app/src/main/res/layout/new_main_layout.xml
@@ -21,4 +21,10 @@
         android:text="渲染yuv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/tv_java_show_yuv_file"
+        android:text="渲染yuv文件"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
